--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/src/index.css" rel="stylesheet">  
     <script type="module" src="https://cdn.jsdelivr.net/npm/zero-md@3?register"></script>
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
     <title>Posing Clinic</title>
   </head>
   <body>
